6827
In 2.10 `scalac TestTrait.scala` fails to compile because of:
```scala
TestTrait.scala:1: error: annotation argument needs to be a constant; found: TestAnnotation.TestEnumOne.A
@TestAnnotation(one=TestAnnotation.TestEnumOne.A, two=TestAnnotation.TestEnumTwo.C, strVal="something")
                                               ^
TestTrait.scala:1: error: annotation argument needs to be a constant; found: TestAnnotation.TestEnumTwo.C
@TestAnnotation(one=TestAnnotation.TestEnumOne.A, two=TestAnnotation.TestEnumTwo.C, strVal="something")
                                                                                 ^
two errors found
```
